--- a/index.html
+++ b/index.html
@@ -2,36 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Multiverse Bubbles</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Multiverse Bubble Wall</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
-
-  <div id="welcome-screen" class="screen center">
+  <div id="welcome-screen">
     <h1>Welcome to the Multiverse</h1>
-    <p id="click-to-continue" class="hidden">Click to go ahead</p>
+    <p id="click-text" style="display: none;">Click to go ahead</p>
   </div>
 
-  <div id="input-screen" class="screen hidden">
-    <h2>Enter your name and location</h2>
-    <input type="text" id="name" placeholder="Your Name" />
-    <input type="text" id="location" placeholder="Your Location" />
-    <button onclick="showQuestion()">Continue</button>
+  <div id="main-app" style="display: none;">
+    <h1>So, what's your career in this universe?</h1>
+    <input type="text" id="answer" placeholder="Type your answer..." />
+    <button id="submit">Submit</button>
+    <div id="bubble-container"></div>
   </div>
 
-  <div id="question-screen" class="screen hidden">
-    <h2>So, what's your career in this universe?</h2>
-    <input type="text" id="answer" placeholder="Enter your answer" />
-    <button onclick="submitAnswer()">Submit</button>
-  </div>
-
-  <div id="bubble-screen" class="screen hidden">
-    <canvas id="bubbleCanvas"></canvas>
-  </div>
-
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
